# vacancies_DB

./: .gitignore  README.md  main.py  pyproject.toml
modules/: DBManager.py  HHParcer.py  error.py
utils/: utils.py
