[tool.poetry]
name = "vacancies-db"
version = "0.1.0"
description = ""
authors = ["airat <c098vm@ya.ru>"]
readme = "README.md"
packages = [{include = "vacancies_db"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
psycopg2-binary = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
